# WXO-Saint-Gabriel-workshop

./: .gitignore  README.md  requirement.txt
00_SETUP/: README.md
LAB_01_CLASSROOM_BEHAVIOR_MONITORING_AGENT/: README.md
LAB_01_CLASSROOM_BEHAVIOR_MONITORING_AGENT/UI/open_api_tools/: class_notes_openapi.json
LAB_01_CLASSROOM_BEHAVIOR_MONITORING_AGENT/backup/BE_google_sheet/: app.py  central-be-procurement-api-74ea71c64c19.json
LAB_02_APPOINTMENT_ASSISTANT_AGENT/: README.md
LAB_02_APPOINTMENT_ASSISTANT_AGENT/UI/: openapi-spec.json
LAB_02_APPOINTMENT_ASSISTANT_AGENT/backup/: Dockerfile  Makefile  app.py  pyproject.toml
LAB_03_STUDENT_ANALYSIS_AND_SUGGESTION_AGENT/: README.md
