[project]
name = "guardrial-thai-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "guardrails-ai",
    "python-dotenv",
    "flask",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
